--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mtm-aD-d9f" userLabel="Pop-up View">
-                                <rect key="frame" x="40" y="164" width="240" height="240"/>
+                                <rect key="frame" x="40" y="163.5" width="240" height="241.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uYm-TG-Qxj" userLabel="Close Button">
                                         <rect key="frame" x="4" y="2" width="15" height="22"/>
@@ -100,54 +100,51 @@
                                             <action selector="close" destination="JFc-fH-5b1" eventType="touchUpInside" id="mzi-gf-NRF"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l9i-b5-1bB">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l9i-b5-1bB">
                                         <rect key="frame" x="70" y="8" width="100" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="0kz-Uw-loQ"/>
+                                            <constraint firstAttribute="width" constant="100" id="XjU-H7-poq"/>
+                                        </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OyD-Sg-HEk" userLabel="Name">
-                                        <rect key="frame" x="8" y="116" width="220" height="24"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OyD-Sg-HEk" userLabel="Name">
+                                        <rect key="frame" x="8" y="116" width="224" height="20.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRb-qY-GVP" userLabel="Artist Name">
-                                        <rect key="frame" x="8" y="142" width="220" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRb-qY-GVP" userLabel="Artist Name">
+                                        <rect key="frame" x="8" y="140.5" width="81.5" height="18"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGN-H0-saT" userLabel="Type:">
-                                        <rect key="frame" x="8" y="165" width="43" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGN-H0-saT" userLabel="Type:">
+                                        <rect key="frame" x="8" y="166.5" width="31.5" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kind Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXL-Qi-bVd" userLabel="Kind Value">
-                                        <rect key="frame" x="67" y="165" width="160" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kind Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXL-Qi-bVd" userLabel="Kind Value">
+                                        <rect key="frame" x="54" y="166.5" width="60" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Genre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-ka-v5C" userLabel="Genre:">
-                                        <rect key="frame" x="8" y="188" width="51" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-ka-v5C" userLabel="Genre:">
+                                        <rect key="frame" x="8" y="185" width="38" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Genre Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5o-GJ-8Aq" userLabel="Genre Value">
-                                        <rect key="frame" x="67" y="188" width="160" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5o-GJ-8Aq" userLabel="Genre Value">
+                                        <rect key="frame" x="54" y="185" width="68.5" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vzf-GZ-959" userLabel="$9.99">
-                                        <rect key="frame" x="161" y="208" width="71" height="24"/>
+                                        <rect key="frame" x="161" y="209.5" width="71" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="KZl-G9-UfU"/>
                                         </constraints>
@@ -158,10 +155,28 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.94999999999999996" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="nRb-qY-GVP" firstAttribute="leading" secondItem="mtm-aD-d9f" secondAttribute="leading" constant="8" id="2Zo-Eh-KIW"/>
+                                    <constraint firstItem="OyD-Sg-HEk" firstAttribute="top" secondItem="l9i-b5-1bB" secondAttribute="bottom" constant="8" id="2wH-d4-rst"/>
+                                    <constraint firstItem="l9i-b5-1bB" firstAttribute="centerX" secondItem="mtm-aD-d9f" secondAttribute="centerX" id="A45-zK-T12"/>
+                                    <constraint firstItem="OyD-Sg-HEk" firstAttribute="leading" secondItem="mtm-aD-d9f" secondAttribute="leading" constant="8" id="BKH-dg-XZF"/>
                                     <constraint firstAttribute="bottom" secondItem="Vzf-GZ-959" secondAttribute="bottom" constant="8" id="Deq-HU-Rtp"/>
+                                    <constraint firstItem="fGN-H0-saT" firstAttribute="leading" secondItem="mtm-aD-d9f" secondAttribute="leading" constant="8" id="GZe-gz-bTd"/>
+                                    <constraint firstItem="gjI-ka-v5C" firstAttribute="leading" secondItem="mtm-aD-d9f" secondAttribute="leading" constant="8" id="Kcx-6X-F2M"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="a5o-GJ-8Aq" secondAttribute="trailing" constant="8" id="NRx-Jv-DFD"/>
                                     <constraint firstAttribute="trailing" secondItem="Vzf-GZ-959" secondAttribute="trailing" constant="8" id="Rh5-fP-8Ow"/>
-                                    <constraint firstAttribute="height" constant="240" id="X1T-hR-x2E"/>
+                                    <constraint firstItem="fGN-H0-saT" firstAttribute="top" secondItem="nRb-qY-GVP" secondAttribute="bottom" constant="8" id="Th3-vD-A0s"/>
+                                    <constraint firstItem="nRb-qY-GVP" firstAttribute="top" secondItem="OyD-Sg-HEk" secondAttribute="bottom" constant="4" id="Va0-Ro-Btu"/>
+                                    <constraint firstItem="Vzf-GZ-959" firstAttribute="top" secondItem="a5o-GJ-8Aq" secondAttribute="bottom" constant="10" id="YKR-A0-IGM"/>
+                                    <constraint firstItem="gjI-ka-v5C" firstAttribute="top" secondItem="fGN-H0-saT" secondAttribute="bottom" constant="4" id="bL1-Zp-Z9P"/>
+                                    <constraint firstItem="a5o-GJ-8Aq" firstAttribute="leading" secondItem="gjI-ka-v5C" secondAttribute="trailing" constant="8" id="boo-oc-PTX"/>
                                     <constraint firstAttribute="width" constant="240" id="btn-nx-bJz"/>
+                                    <constraint firstAttribute="trailing" secondItem="OyD-Sg-HEk" secondAttribute="trailing" constant="8" id="fba-A7-fms"/>
+                                    <constraint firstItem="a5o-GJ-8Aq" firstAttribute="leading" secondItem="TXL-Qi-bVd" secondAttribute="leading" id="hzT-QI-qcH"/>
+                                    <constraint firstItem="l9i-b5-1bB" firstAttribute="top" secondItem="mtm-aD-d9f" secondAttribute="top" constant="8" id="mWL-dA-MpV"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nRb-qY-GVP" secondAttribute="trailing" constant="8" id="o1Y-JS-0hu"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TXL-Qi-bVd" secondAttribute="trailing" constant="8" id="ut8-4d-rRR"/>
+                                    <constraint firstItem="TXL-Qi-bVd" firstAttribute="baseline" secondItem="fGN-H0-saT" secondAttribute="baseline" id="w5b-To-vFw"/>
+                                    <constraint firstItem="a5o-GJ-8Aq" firstAttribute="baseline" secondItem="gjI-ka-v5C" secondAttribute="baseline" id="y7d-sA-cfB"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -184,7 +199,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m9o-Qq-bmX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1515" y="31"/>
+            <point key="canvasLocation" x="981" y="30"/>
         </scene>
     </scenes>
     <resources>
